# certbot-dns-tecnocratica

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
certbot_dns_tecnocratica/: __init__.py  dns_tecnocratica.py
tests/: dns_tecnocratica_test.py
